[master] Repositioned for consistency.

--- a/20211126joint/presentation.tex
+++ b/20211126joint/presentation.tex
@@ -191,12 +191,12 @@
     \E \rvUrllcLoadMinislot & = \int_{0}^{\vaFB} \E \rvUrllcLoadMF df\nonumber\\
     & = \int_{0}^{\vaResourceMinislot \csFB \csMinislot} \vaResourceMF \E D df\nonumber\\
     & = \E D \int_{0}^{\vaResourceMinislot \csFB \csMinislot} \vaResourceMF df\nonumber\\
-    & = \E D \vaResourceMinislot
+    & = \vaResourceMinislot \E D
   \end{align}
   Similar derivations for slot give
   \begin{equation}
     \label{eq:relation}
-    \E \rvUrllcLoadSlot = \E D \vaResourceSlot
+    \E \rvUrllcLoadSlot = \vaResourceSlot \E D
   \end{equation}
 \end{frame}
 
