[master] Removed redundant equation number.

--- a/20211126joint/presentation.tex
+++ b/20211126joint/presentation.tex
@@ -203,7 +203,7 @@
 \begin{frame}
   By equations \ref{eq:model} and \ref{eq:relation},
   \begin{align}
-    \E \rvChannelStateCapacity & = \csChannelStatePeakCapacity \left( \vaResourceSlot - \vaResourceSlot \E D \right)\\
+    \E \rvChannelStateCapacity & = \csChannelStatePeakCapacity \left( \vaResourceSlot - \vaResourceSlot \E D \right)\nonumber\\
     & = \csChannelStatePeakCapacity \vaResourceSlot \left( 1 - \E D \right)
   \end{align}
 \end{frame}
