--- a/20211126joint/reference.bib
+++ b/20211126joint/reference.bib
@@ -1,10 +1,1 @@
-@article{linear,
-    author  = "Alexander L. Stolyar",
-    DOI     = "https://doi.org/10.1287/opre.1040.0156",
-    journal = "Operations Research",
-    number  = "1",
-    pages   = "12--25",
-    title   = "On the Asymptotic Optimality of the Gradient Scheduling Algorithm for Multiuser Throughput Allocation",
-    volume  = "53",
-    year    = "2005"
-}
+@ARTICLE{linear,  author={Anand, Arjun and de Veciana, Gustavo and Shakkottai, Sanjay},  journal={IEEE/ACM Transactions on Networking},   title={Joint Scheduling of URLLC and eMBB Traffic in 5G Wireless Networks},   year={2020},  volume={28},  number={2},  pages={477-490},  doi={10.1109/TNET.2020.2968373}}
