[master] Updated report.

--- a/1101-research/paper.tex
+++ b/1101-research/paper.tex
@@ -4,25 +4,29 @@
 
 \addbibresource{reference.bib}
 
-\title{\textbf{Research Methodology I -- Report}}
-\author{Tran Phong Binh\thanks{Student ID: 110062421}}
-\affil{High-Speed Communication and Computer Laboratory, Department of Computer Science, National Tsing Hua University}
+\title{\textbf{Research Methodology I Report}}
+\author{Tran Phong Binh (Student ID: 110062421)}
+\affil{Advisor: Chair Professor Jang-Ping Sheu}
 \date{\today}
 
 \begin{document}
 
 \maketitle
 
+\section{Report}
 I have learned and grown a lot in terms of academic research abilities in the semester of Fall 2021. This report consists of two main sections. First, I describe the projects and studies I have conducted throughout the semester, citing the progresses in details. I then conclude by laying out my road map for the next semester, which aims to initiate the Master's Thesis in late July 2022.
 I began researching in the summer of 2021, participating in 10 communications-focused training seminars by seniors of the High-Speed Communication and Computer Laboratory (HSCC Lab), while reading a 5G transactions article on joint scheduling of eMBB and URLLC traffics \cite{5gJointACM}. I also signed up and earned completion certificate at Machine Learning Summer School (MLSS) 2021 Taipei hosted by National Taiwan University, strengthening my implementation skills in artificial intelligence. Additionally, I spent most of my leisure time studying linear algebra, finishing all 34 lectures by Massachusetts Institute of Technology (MIT) Professor Gilbert Strang. Major skills I obtained from MIT 18.06 Linear Algebra, Spring 2005 included: Markov Matrices, Fourier Transform, Symmetric Positive Definite Matrices, Singular Value Decomposition, and Pseudoinverse.
 
 Once the semester started, I got involved in the motor anomaly detection project by Delta Electronics in collaboration with HSCC Lab. I read and reported 3 papers on Bayesian optimization \cite{bayesPortfolio, bayesSearch, bayesBandit} with the lab members, sharing and learning from my peers in the lab. I finalized the project implementing Gaussian Process Hedge (GP-Hedge) algorithm, which selected acquisition functions for Bayesian optimization algorithm automatically -- a form of Automated Machine Learning (AutoML). A new project was then scheduled by the company, addressing industrial anomaly detection using Generative Adversarial Networks (GANs), to which I contributed a brief on the paper \cite{efficientGAN}.
 
-Apart from the company projects, I enrolled in two courses: Internet of Things: Technologies and Applications by Chair Professor Jang-Ping Sheu and Broadband Mobile Communications by Professor Jung-Chun Kao, whose topics aligned closely with the research area of my Master's Thesis -- resource allocations in B5G networks. I also registered as one of the Teaching Assistants for the subject Design and Analysis of Algorithms lectured by Professor Sheu, setting up online/offline class meetings, monitoring mid-term/final exams, grading homework 4 and the final test. By attending the lectures, I broadened and consolidated my knowledge and understanding in Internet of Things (IoT), communications systems, and algorithms, all of which were great foundations for my research in 5G networks.
+Apart from the company projects, I enrolled in two courses: Internet of Things: Technologies and Applications by Chair Professor Jang-Ping Sheu and Broadband Mobile Communications by Professor Jung-Chun Kao, whose topics aligned closely with the research area of my Master's Thesis -- resource allocations in B5G networks. I also registered as one of the Teaching Assistants for the subject Design and Analysis of Algorithms lectured by Professor Sheu, setting up online/offline class meetings, monitoring mid-term/final exams, grading homework 4 and the final test. By attending the lectures, I broadened and consolidated my knowledge and understanding in Internet of Things (IoT), communications systems, and algorithms, all of which were great foundations for my research in B5G architectures.
 
 Moreover, I pushed hard in self-learning. I made it to the 13th lecture (out of 23) at course MIT 6.034 Artificial Intelligence, Fall 2010 by Professor Patrick H. Winston, mastering Deep Learning, Support Vector Machines (SVM), Identification Trees, etc. In addition, I ground for convex optimization, digesting the book and lectures by Stanford Professor Stephen P. Boyd. When I were free from homeworks and projects, I immersed myself in applied maths, adding to my mathematical apparatus Kalman Filter, Pearson Correlation Coefficient, and Gaussian Process. But perhaps most importantly, I comprehended more than 3 papers in 5G resource allocations \cite{5gJointThreshold, 5gJointACM, 5gQoS, 5gNoma}, absorbing state-of-the-arts in the literature, finding research gaps, and navigated directions for my Master's Thesis.
 
-I have three prime goals for the next semester: taking course credits to meet graduation requirement, reading 30 papers before July, and initiating my Master's Thesis. First and foremost, I will take Stochastic Processes for Networking by Professor Kao and Approximation Algorithms by Professor Ming-Jer Tsai, boosting up my researching capabilities in wireless communication networks. Secondly, I plan for one academic paper reading per week, picking up new ideas for my thesis as fast as possible while not affecting my performance on classes. Thirdly, in the summer of 2022, I plan to kickstart my graduation work with two leading approaches: find a new practical problem and solve it with approximate algorithms, or solve an old problem using convex optimization. Last but not least, I will keep up my pace with projects from the company and research assignments from my advisor.
+I have three prime goals for the next semester: taking course credits to meet graduation requirement, reading 30 papers before July, and initiating my Master's Thesis. First and foremost, I will take Stochastic Processes for Networking by Professor Kao and Approximation Algorithms by Professor Ming-Jer Tsai, boosting up my researching capabilities in wireless communication networks. Secondly, I plan for one academic paper reading per week, picking up new ideas for my thesis as fast as possible while not affecting my performance on classes. Thirdly, in the summer of 2022, I plan to kickstart my graduation work with two leading approaches: find a new practical problem and solve it with approximate algorithms, or solve an old problem using convex optimization; submitting to IEEE conferences like ICC, GLOBECOM, and WCNC. Last but not least, I will keep up my pace with projects from the company and exciting research assignments from my advisor.
+
+\section{Advisor's Commentary}
+Advisor's signature:
 
 \printbibliography
 
