[master] Added embb use cases.

--- a/idea/presentation.tex
+++ b/idea/presentation.tex
@@ -23,7 +23,7 @@
 \begin{frame}
   \frametitle{Scenario 2: Neighborhood}
   \begin{itemize}
-    \item There are 2,000 households (up to 8,000 eMBB users)
+    \item There are 2,000 households (up to 8,000 eMBB users e.g. downloading files, watching YouTube, surfing Facebook/Instagramm, etc.)
     \item During work hours and at night, there are only a few URLLC autonomous cars moving around
     \item Downlink transmission accounts for eMBB users' requests and URLLC autonomous cars' controlling
     \item Uplink transmission (whose bandwidth is separated from that of downlink) is responsible for uploading cars' data (e.g. camera images, GPS, sensors data, etc.) to server for navigation processing
