[master] Added implicit assumption on URLLC connection.

--- a/idea/presentation.tex
+++ b/idea/presentation.tex
@@ -52,7 +52,7 @@
         \item One base station cannot serve that many eMBB users due to bandwidth limitation
         \item eMBB users located at base stations' coverage edges suffer from poor capacity due to path loss, channel fading, and shadowing (especially if mmWave is employed)
       \end{itemize}
-    \item Solution: Multiconnectivity
+    \item Solution: Multiconnectivity for eMBB user equipments (assume URLLC user equipments have only 1 antenna and always connect to their closest base station)
     \item Motivation:
     \item Pros and Cons:
       \begin{itemize}
