[master] Corrected interference problem of multiconnectivity to multicell.

--- a/idea/presentation.tex
+++ b/idea/presentation.tex
@@ -64,7 +64,7 @@
 \end{frame}
 
 \begin{frame}
-  \frametitle{eMBB \& URLLC Interference Problem of Multiconnectivity}
+  \frametitle{eMBB \& URLLC Interference Problem of Multicell}
   \begin{itemize}
     \item eMBB interference problem: Even without taking URLLC user equipments into account, interference may occur among eMBB user equipments of \emph{different} base stations
     \item URLLC interference problem:
@@ -77,7 +77,7 @@
 \end{frame}
 
 \begin{frame}
-  \frametitle{eMBB \& URLLC Interference Problem of Multiconnectivity}
+  \frametitle{eMBB \& URLLC Interference Problem of Multicell}
   \begin{itemize}
     \item Solution 1: Mathematical optimization with optimal analysis (currently researching \cite{dualConnectivityOptimal})
     \item Solution 2: Approximation algorithm with approximation ratio analysis (currently researching \cite{dualConnectivityApproximate})
@@ -85,7 +85,7 @@
 \end{frame}
 
 \begin{frame}
-  \frametitle{eMBB \& URLLC Interference Problem of Multiconnectivity}
+  \frametitle{eMBB \& URLLC Interference Problem of Multicell}
   \begin{itemize}
     \item Solution 3: W-CDMA (Wideband Code Division Multiple Access)
     \item Motivation: LEACH (Low-Energy Adaptive Clustering Hierarchy)
