[master] Added urllc superposition problem.

--- a/idea/presentation.tex
+++ b/idea/presentation.tex
@@ -114,6 +114,16 @@
 \end{frame}
 
 \begin{frame}
+  \frametitle{RB-Wise Interference Problem of URLLC Superposition}
+  \begin{itemize}
+    \item If URLLC superposition system is used, then interference is guaranteed to occur between eMBB and URLLC user equipment of the same resource block (RB)
+    \item Solution: URLLC puncturing
+    \item Motivation: \cite{urllcSuperpositionRefuse}
+    \item Pros and Cons:
+  \end{itemize}
+\end{frame}
+
+\begin{frame}
   \frametitle{System Model}
   \begin{figure}
     \includegraphics[width=\textwidth]{system_model}
