--- a/idea/reference.bib
+++ b/idea/reference.bib
@@ -15,3 +15,18 @@
   title={Resource Allocation for the 4G and 5G Dual-Connectivity Network with NOMA and NR},
   year={2022}
 }
+
+@inproceedings{urllcSuperpositionRefuse,
+  author = {Kai Ying and John M. Kowalski and Toshizo Nogami and Zhanping Yin and Jia Sheng},
+  title = {{Coexistence of enhanced mobile broadband communications and ultra-reliable low-latency communications in mobile front-haul}},
+  volume = {10559},
+  booktitle = {Broadband Access Communication Technologies XII},
+  editor = {Benjamin B. Dingel and Katsutoshi Tsukamoto and Spiros Mikroulis},
+  organization = {International Society for Optics and Photonics},
+  publisher = {SPIE},
+  pages = {56 -- 62},
+  keywords = {Enhanced mobile broadband communication (eMBB), Ultra reliable low latency communication (URLLC), Outer code, Resource pre-emption, Mobile front-haul, Interleaving, 5G, Coexistence of eMBB and URLLC},
+  year = {2018},
+  doi = {10.1117/12.2287563},
+  URL = {https://doi.org/10.1117/12.2287563}
+}
