[master] Added system framework reference.

--- a/idea/presentation.tex
+++ b/idea/presentation.tex
@@ -7,6 +7,8 @@
 \addbibresource{reference.bib}
 \setbeamertemplate{bibliography item}{\insertbiblabel}
 
+\renewcommand{\bibfont}{\tiny}
+
 \newcommand
 {\const}
 [1]
@@ -135,7 +137,7 @@
   \frametitle{System Framework}
   \begin{figure}
     \includegraphics[width=\textwidth]{system_framework}
-    \caption{System framework}
+    \caption{System framework \cite{embbUrllcMultiplexing}}
   \end{figure}
 \end{frame}
 
