--- a/idea/reference.bib
+++ b/idea/reference.bib
@@ -30,3 +30,14 @@
   doi = {10.1117/12.2287563},
   URL = {https://doi.org/10.1117/12.2287563}
 }
+
+@article{embbUrllcMultiplexing,
+  author={Yin, Hao and Zhang, Lyutianyang and Roy, Sumit},
+  journal={IEEE Transactions on Communications},
+  title={Multiplexing URLLC Traffic Within eMBB Services in 5G NR: Fair Scheduling},
+  year={2021},
+  volume={69},
+  number={2},
+  pages={1080-1093},
+  doi={10.1109/TCOMM.2020.3035582}
+}
