[master] removed the.

--- a/AVS20/presentation.tex
+++ b/AVS20/presentation.tex
@@ -511,7 +511,7 @@
       \begin{equation}
         \avgRate{\embbUser} = \frac{ 1 }{ \embbUserN } \sum_{ \embbTime }{ \left( \embbTwo{\embbUser}{\embbTime} - \embbTwo{\embbUser}{\embbTime} \lossFunc{ \frac{ \factorThree{\urllcUser}{\embbUser}{\embbTime} \demandTwo{\urllcUser}{\embbTime} }{ \embbTwo{\embbUser}{\embbTime} } } \right) \peakRateTwo{\embbUser}{\embbTime} },\quad \forall\embbUser
       \end{equation}
-    \item Finally, they hide the $\demandTwo{\urllcUser}{\embbTime}$ from their problem formulation and state that it is a convex optimization problem.
+    \item Finally, they hide $\demandTwo{\urllcUser}{\embbTime}$ from their problem formulation and state that it is a convex optimization problem.
       \begin{figure}
         \includegraphics[width=0.5\textwidth]{problem}
         \caption{Problem}
