[master] clarified why their pareto is wrong.

--- a/AVS20/presentation.tex
+++ b/AVS20/presentation.tex
@@ -534,7 +534,7 @@
 \begin{frame}
   \frametitle{Notes}
   \begin{itemize}
-    \item They incorrectly address Pareto optimality.
+    \item They incorrectly address Pareto optimality, as their problem is not a vector optimization problem.
     \item They incorrectly reference gradient algorithm's moving average rate update function (twice).
     \item They model channel states, but I think it was sufficient to describe channel states using time slot index.
     \item They hide the formulation of linear loss model.
