[master] added ofdma.

--- a/YZR21/presentation.tex
+++ b/YZR21/presentation.tex
@@ -257,7 +257,7 @@
 \begin{frame}
   \frametitle{System Model}
   \begin{itemize}
-    \item One base station, downlink transmission, eMBB and URLLC users.
+    \item One base station, downlink transmission, orthogonal frequency-division multiple accses (OFDMA), eMBB and URLLC users.
     \item Saturated eMBB traffic \cite{S05}: Each eMBB user has infinite amount of data to be served.
   \end{itemize}
   \begin{figure}
