[master] Added users.

--- a/YZR21/presentation.tex
+++ b/YZR21/presentation.tex
@@ -295,10 +295,14 @@
 
 \begin{frame}
   \frametitle{System Framework}
-  \begin{figure}
-    \includegraphics[width=\textwidth]{system_framework}
-    \caption{System framework}
-  \end{figure}
+  \begin{itemize}
+    \item 3 eMBB users $\set{ \textcolor{blue}{0}, \textcolor{yellow}{1}, \textcolor{green}{2} }$.
+    \item 2 URLLC users $\set{ \textcolor{orange}{0}, \textcolor{red}{1} }$.
+    \begin{figure}
+      \includegraphics[width=\textwidth]{system_framework}
+      \caption{System framework}
+    \end{figure}
+  \end{itemize}
 \end{frame}
 
 \begin{frame}
