[master] added MMSE description.

--- a/YZR21/presentation.tex
+++ b/YZR21/presentation.tex
@@ -326,7 +326,7 @@
       \begin{equation}
         \pathLossDB{\frequency}{\distance} = 20 \log_{ 10 }{ \frac{ 4 \pi \frequency }{ \lightSpeed } } + 10 \pathLossExponent \log_{10}{\distance} + \dB{\shadowingStddv}
       \end{equation}
-    \item Path loss exponent and shadowing standard deviation for urban macro-cellular (UMa) line-of-sight (LoS) over frequency and 3D distance ranging from 2 to 73.5\textcolor{red}{GHz} and 58 to 930\textcolor{red}{m} are derived as \cite{SRRTGKRKPJ16}
+    \item Path loss exponent and shadowing standard deviation for urban macro-cellular (UMa) line-of-sight (LoS) over frequency and 3D distance ranging from 2 to 73.5\textcolor{red}{GHz} and 58 to 930\textcolor{red}{m} are derived via minimum mean square error (MMSE) fit by \cite{SRRTGKRKPJ16} as
       \begin{align}
         \pathLossExponent &= 2\\
         \dB{\shadowingStddv} &= 4.6
