--- a/YZR21/reference.bib
+++ b/YZR21/reference.bib
@@ -19,3 +19,14 @@
   pages={1-6},
   doi={10.1109/VTCSpring.2016.7504435}
 }
+
+@article{LPN12,
+  author={Le, Thi Hoai An and Pham, Dinh Tao and Ngai, Huynh Van},
+  journal={Journal of Global Optimization},
+  title={Exact Penalty and Error Bounds in DC Programming},
+  year={2012},
+  volume={52},
+  number={3},
+  pages={509-535},
+  doi={10.1007/s10898-011-9765-3}
+}
